<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/pin_bullets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/bullet_1"
            android:layout_width="@dimen/pin_bullet_width"
            android:layout_height="@dimen/pin_bullet_height"
            android:layout_margin="@dimen/pin_bullet_margin"
            android:src="@drawable/pin_bullet"
            android:contentDescription="@string/content_description_bullet" />

        <ImageView
            android:id="@+id/bullet_2"
            android:layout_width="@dimen/pin_bullet_width"
            android:layout_height="@dimen/pin_bullet_height"
            android:layout_margin="@dimen/pin_bullet_margin"
            android:src="@drawable/pin_bullet"
            android:contentDescription="@string/content_description_bullet" />

        <ImageView
            android:id="@+id/bullet_3"
            android:layout_width="@dimen/pin_bullet_width"
            android:layout_height="@dimen/pin_bullet_height"
            android:layout_margin="@dimen/pin_bullet_margin"
            android:src="@drawable/pin_bullet"
            android:contentDescription="@string/content_description_bullet" />

        <ImageView
            android:id="@+id/bullet_4"
            android:layout_width="@dimen/pin_bullet_width"
            android:layout_height="@dimen/pin_bullet_height"
            android:layout_margin="@dimen/pin_bullet_margin"
            android:src="@drawable/pin_bullet"
            android:contentDescription="@string/content_description_bullet" />

        <ImageView
            android:id="@+id/bullet_5"
            android:layout_width="@dimen/pin_bullet_width"
            android:layout_height="@dimen/pin_bullet_height"
            android:layout_margin="@dimen/pin_bullet_margin"
            android:src="@drawable/pin_bullet"
            android:contentDescription="@string/content_description_bullet" />

        <ImageView
            android:id="@+id/bullet_6"
            android:layout_width="@dimen/pin_bullet_width"
            android:layout_height="@dimen/pin_bullet_height"
            android:layout_margin="@dimen/pin_bullet_margin"
            android:src="@drawable/pin_bullet"
            android:contentDescription="@string/content_description_bullet" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_1"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_1"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:layout_marginTop="@dimen/pin_keyboard_button_margin_top"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/pin_bullets"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/keyboard_2"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_2"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_2"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:layout_marginTop="@dimen/pin_keyboard_button_margin_top"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/pin_bullets"
        app:layout_constraintEnd_toStartOf="@+id/keyboard_3"
        app:layout_constraintStart_toEndOf="@+id/keyboard_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_3"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_3"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:layout_marginTop="@dimen/pin_keyboard_button_margin_top"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/pin_bullets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/keyboard_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_4"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_4"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/keyboard_1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/keyboard_5"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_5"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_5"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/keyboard_1"
        app:layout_constraintEnd_toStartOf="@+id/keyboard_6"
        app:layout_constraintStart_toEndOf="@+id/keyboard_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_6"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_6"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/keyboard_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/keyboard_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_7"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_7"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/keyboard_4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/keyboard_8"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_8"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_8"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/keyboard_4"
        app:layout_constraintEnd_toStartOf="@+id/keyboard_9"
        app:layout_constraintStart_toEndOf="@+id/keyboard_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_9"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_9"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/keyboard_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/keyboard_8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_0"
        style="@style/pinButton"
        android:text="@string/pin_keyboard_0"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        android:textSize="@dimen/pin_keyboard_button_text"
        app:layout_constraintTop_toBottomOf="@id/keyboard_7"
        app:layout_constraintEnd_toStartOf="@+id/keyboard_backspace"
        app:layout_constraintStart_toStartOf="@+id/keyboard_8"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/keyboard_backspace"
        style="@style/pinButton"
        app:icon="@drawable/baseline_backspace_24"
        app:iconPadding="0dp"
        app:iconGravity="textStart"
        android:contentDescription="@string/content_description_backspace"
        android:layout_width="@dimen/pin_keyboard_button_size"
        android:layout_height="@dimen/pin_keyboard_button_size"
        app:layout_constraintTop_toBottomOf="@id/keyboard_7"
        app:layout_constraintEnd_toEndOf="@id/keyboard_9"
        app:layout_constraintStart_toEndOf="@id/keyboard_0" />

</androidx.constraintlayout.widget.ConstraintLayout>
